# ChangeLog for www-misc/mozilla-sync-server-storage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  mozilla-sync-server-storage-1.15.3.ebuild:
  Drop PYTHON_MODNAME, it's not used in distutils-r1.

*mozilla-sync-server-storage-1.15.3 (12 Feb 2013)

  12 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  -mozilla-sync-server-storage-1.15.2.ebuild,
  +mozilla-sync-server-storage-1.15.3.ebuild:
  Version bump.

  06 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  mozilla-sync-server-storage-1.15.2.ebuild:
  Use REQUIRED_USE for ldap/memcached/mysql/sqlite.

  06 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  mozilla-sync-server-storage-1.15.2.ebuild:
  Add PYTHON_MODNAME.

*mozilla-sync-server-storage-1.15.2 (06 Feb 2013)

  06 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +mozilla-sync-server-storage-1.15.2.ebuild, +metadata.xml:
  Initial import. Ebuild by me.
