@@ -1,6 +1,10 @@
 # ChangeLog for www-misc/mozilla-sync-server-storage
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Aug 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  mozilla-sync-server-storage-1.15.3.ebuild:
+  Remove invalid USE dependency.
 
   27 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
   mozilla-sync-server-storage-1.15.3.ebuild:
